Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  labels:
    name: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  #- host: <Host>
  - http:
      paths:
      - pathType: Prefix
        path: "/harsha/webapp1(.*)"
        backend:
          service:
            name: webapp1-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/harsha/webapp2(.*)"
        backend:
          service:
            name: webapp2-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/harsha/(.*)"
        backend:
          service:
            name: webapp3-svc
            port: 
              number: 80
